--- a/root/html/herdHikes.html
+++ b/root/html/herdHikes.html
@@ -57,6 +57,8 @@
         <p id="underNameSub">UI/UX</p>
         <hr>
 
+  
+
         <div id="shortBio">
             <p id="bioBody">
 
@@ -68,22 +70,20 @@
                 <br>
             </p>
         </div>
-<br><br>
+        <table>
+            <tr>
+                <td id="topRow"><strong>ROLE</strong></td>
+                <td id="topRow"><strong>YEAR</strong></td>
+                <td id="topRow"><strong>TECH</strong></td>
+            </tr>
+            <tr>
+                <td>UI/UX Designer & Researcher</td>
+                <td>2021</td>
+                <!-- <td>School</td> -->
+                <td id="makeInline">Illustrator & Figma</td>
+            </tr>
+        </table>
 
-                <table>
-                    <tr>
-                        <td id="topRow"><strong>ROLE</strong></td>
-                        <td id="topRow"><strong>YEAR</strong></td>
-                        <!-- <td id="topRow"><strong>PROJECT TYPE</strong></td> -->
-                        <td id="topRow"><strong>TECH</strong></td>
-                    </tr>
-                    <tr>
-                        <td>UI/UX Designer<br> Researcher</td>
-                        <td>2021</td>
-                        <!-- <td>School</td> -->
-                        <td id="makeInline">Illustrator<br>Adobe XD</td>
-                    </tr>
-                </table>
 
                 <!-- skills -->
                 <div class="skills "></div>
@@ -97,7 +97,7 @@
                 </div>
     
     <!-- </div> -->
-    <div id="topic">
+    <div id="shortBio">
         <h1 id="sectionHead">Competitive Analysis</h1>
 
         <div id="shortBio">
@@ -145,6 +145,7 @@
         </table>
         </div>
         </div>
+        <div id="shortBio">
         <h1 id="sectionHead">Sample Questions</h1>
         <div id="shortBio">
         <p id="bioBody">
@@ -163,9 +164,10 @@
 
 
 </div>
+</div>
     </div>
 
-    <div id="topic">
+    <div id="shortBio">
         <h1 id="sectionHead">Personas</h1>
         <img src="../images/st_persona1.png" width=25%>
         <img src="../images/st_persona2.png" width="25%">
@@ -173,12 +175,12 @@
     </div>
 
 
-    <div id="topic">
+    <div id="shortBio">
         <h1 id="sectionHead">Affinity Diagram </h1>
         <img src="../images/st_affinDiag.png" width="35%">
     </div>
 
-    <div id="topic">
+    <div id="shortBio">
         <h1 id="sectionHead">Design Criteria from Data</h1>
         <div id="shortBio">
         <p id="bioBody">
@@ -192,7 +194,7 @@
 
     <!-- <p id = "skillsHeader "> Experience<p> -->
     
-    <div id="topic">
+    <div id="shortBio">
         <h1 id="sectionHead">Ideation</h1>
         <div id="shortBio">
         <p id="bioBody">
@@ -204,7 +206,7 @@
 </div>
     </div>
 
-    <div id="topic">
+    <div id="shortBio">
         <h1 id="sectionHead">Idea Selection</h1>
         <div id="shortBio">
         <p id="bioBody">
@@ -217,7 +219,7 @@
 </div>
     </div>
 
-    <div id="topic">
+    <div id="shortBio">
         <h1 id="sectionHead">Low-Fidelity Prototype</h1>
         <h1 id="sectionHead">Features</h1>
         <div id="shortBio">
@@ -242,7 +244,7 @@
         <h1 id="sectionHead">High-Fidelity Prototypes and Scenarios</h1> 
     </div> -->
 
-    <div id="topic">
+    <div id="shortBio">
         <h1 id="sectionHead">Key Activities</h1>
         <div id="shortBio">
         <p id="bioBody">●  Create outing(s) public and private and invite others
