--- a/root/html/herdHikes.html
+++ b/root/html/herdHikes.html
@@ -117,7 +117,7 @@
         <table>
             <tr>
                 <th>Interview Method</th>
-                <td>Number</td>
+                <td>#</td>
             </tr>
             <tr>
                 <th>Online Survey</th>
@@ -151,7 +151,7 @@
         <p id="bioBody">
 
     ● What additional activities do you like to participate in while on a hiking trip? (e.g. climbing, kayaking, biking, camping, etc.)
-            <br>● How often do you hike throughout the year, and what factors motivate your decisions?
+            <br><br>● How often do you hike throughout the year, and what factors motivate your decisions?
             <br><br>● Approximately how many hiking trips do you schedule and cancel each year? Why?
             <br><br>● What are the factors used to determine which trail you choose? (eg. location, difficulty, trail completion time, views, landmarks, etc.)
             <br><br>● Do you prefer to hike in groups or alone? How do you coordinate hiking trips? What are associated hurdles? </p>
@@ -159,7 +159,7 @@
         <h1 id="sectionHead">Data-Driven Insight</h1>
 
         <p id="bioBody"> One individual interviewed has a friendly competition with a friend relating to tracking their physical activity, so we could see competition being a small factor for some users. <br><br>78% of  interviewees did not like using their phones during hikes.<br><br> A few people
-            liked to track their steps and calories on the trail.<br><br> Everyone liked hiking with at least a small group of friends, <br><br>and all individuals interviewed stated that they like to hike because they enjoy being outdoors.
+            liked to track their steps and calories on the trail.<br><br> Everyone liked hiking with at least a small group of friends.<br><br>All interviewees stated that they like to hike because they want to spend time outdoors.
         </p>
 
 
@@ -213,22 +213,20 @@
             To select the final design concept, I looked at the ideas generated, and analyzed them in terms of whether the concept meets design criteria and what has the potential to meet market/user needs.
             <u>Community</u> was the most importand design criteria, as determined from the data.
             <br> <br> After creating the ideas I separated them into main categories. Green sticky notes indicate the most relevant categories, and the blue sticky notes beneath
-            highlight the most relevant ideas. I thought that planning a group hiking event and finding people to join you in your hike, satisfied our design requirements and met unsatisfied needs.
+            highlight the most relevant ideas. Finally, it was concluded that planning a group hiking event and finding people to join you in your hike, satisfied our design requirements and met unsatisfied needs.
             <br> <br> Finally, the idea for HikeHerd was born and I began outlining features inspired by findings and began prototyping concepts.
         </p>
 </div>
     </div>
 
     <div id="shortBio">
-        <h1 id="sectionHead">Low-Fidelity Prototype</h1>
-        <h1 id="sectionHead">Features</h1>
+        <h1 id="sectionHead">Design Criteria Integration</h1>
         <div id="shortBio">
         <p id="bioBody">
-          <b>Focus on Community and Convenience</b> : Our interviewees liked the social aspects of hiking, yet sometimes struggled with planning. This website will provide features to the user to help them plan and obtain information regarding their
+          <b>Focus on Community and Convenience</b> - Our interviewees liked the social aspects of hiking but struggle with planning hikes. This website will provide features to the user to help them plan and obtain information regarding their
             hike in a centralized location.
 
-            <br><br><b>Stakeholders</b> : The most relevant stakeholders would be enthusiastic hikers looking to hike with groups of individuals. Primarily this appeals to our John Walker persona, which includes individuals that want to plan hikes with others,
-            track progress, and belong to an enthusiastic hiking-centered community. This app will likely appeal to enthusiastic hikers of ages 20-45.
+            <br><br><b>Users</b> - The most relevant users would be enthusiastic hikers looking to hike with groups of individuals. Primarily this appeals to our John Walker persona. Our target demographic consists of enthusiastic hikers 25-50.
           
 
 </p>
@@ -247,11 +245,12 @@
     <div id="shortBio">
         <h1 id="sectionHead">Key Activities</h1>
         <div id="shortBio">
-        <p id="bioBody">●  Create outing(s) public and private and invite others
-            <br><br>●  Browse hiking locations, upcomming community hikes, trail features, reviews and view other user's geotagged photos. <br>●  Send and receive messages.
+        <p id="bioBody">●  Create an outing, either public and private and invite others
+            <br><br>●  Discover hiking locations, upcomming hikes, read reviews, comment and view geotagged photos. 
+
             <br><br>●  Dashboard - users can view calendar, Accept, Decline, view Reminders regarding outings. If a user selects “Going”, it will be added to the user’s calendar. 
-            <br><br>●  Each user will have their own profile, displaying photos and preferences. Profiles can be public or private. 
-            <br><br>●  Users can list favorite locations and obtain information regarding events in those locations, manage contacts, and follow certain users’ blog entries.
+            <br><br>●  Each user will have their own profile (public or private), displaying photos and preferences. 
+            <br><br>●  Users can list favorite locations and obtain information regarding events in those locations, manage contacts, follow different users, read blog posts.
             <br>
         </p>
 
