--- a/root/html/herdHikes.html
+++ b/root/html/herdHikes.html
@@ -64,7 +64,6 @@
 
                 <br>
                 Hiking is an excellent activity that presents a unique opportunity for individuals to exercise, enjoy nature, socialize, and take a mental break from the chaos of everyday life. 
-                <!-- My goal was to create a product that inspires people to hike while simplifying the logistical requirements associated with planning group trips. -->
                 The goal was to create a product that decreases the users' logistical concerns, allowing them to focus on the hike more than the planning, scheduling, coordinating and communicatiion.
                 <br>
                 <br>
@@ -72,14 +71,13 @@
         </div>
         <table>
             <tr>
-                <td id="topRow"><strong>ROLE</strong></td>
-                <td id="topRow"><strong>YEAR</strong></td>
-                <td id="topRow"><strong>TECH</strong></td>
+                <td id="topRow"><strong>Role</strong></td>
+                <td id="topRow"><strong>Year</strong></td>
+                <td id="topRow"><strong>Tech</strong></td>
             </tr>
             <tr>
                 <td>UI/UX Designer & Researcher</td>
                 <td>2021</td>
-                <!-- <td>School</td> -->
                 <td id="makeInline">Illustrator & Figma</td>
             </tr>
         </table>
@@ -95,8 +93,7 @@
                 <div class="skills">
 
                 </div>
-    
-    <!-- </div> -->
+
     <div id="shortBio">
         <h1 id="sectionHead">Competitive Analysis</h1>
 
@@ -191,8 +188,6 @@
         </p>
 </div>
     </div>
-
-    <!-- <p id = "skillsHeader "> Experience<p> -->
     
     <div id="shortBio">
         <h1 id="sectionHead">Ideation</h1>
@@ -238,10 +233,6 @@
 
     </div>
 
-    <!-- <div id="topic">
-        <h1 id="sectionHead">High-Fidelity Prototypes and Scenarios</h1> 
-    </div> -->
-
     <div id="shortBio">
         <h1 id="sectionHead">Key Activities</h1>
         <div id="shortBio">
@@ -279,7 +270,6 @@
 <!-- </div> -->
 
 <script>
-//Get the button
 var mybutton = document.getElementById("myBtn");
 
 
