--- a/root/html/herdHikes.html
+++ b/root/html/herdHikes.html
@@ -166,15 +166,15 @@
 
     <div id="shortBio">
         <h1 id="sectionHead">Personas</h1>
-        <img src="../images/st_persona1.png" width=25%>
-        <img src="../images/st_persona2.png" width="25%">
-        <img src="../images/st_persona3.png" width="25%">
+        <img src="../images/st_persona1.png" width="25%" id="contentImage">
+        <img src="../images/st_persona2.png" width="25%" id="contentImage">
+        <img src="../images/st_persona3.png" width="25%" id="contentImage">
     </div>
 
 
     <div id="shortBio">
         <h1 id="sectionHead">Affinity Diagram </h1>
-        <img src="../images/st_affinDiag.png" width="35%">
+        <img src="../images/st_affinDiag.png" width="35%" id="contentImage">
     </div>
 
     <div id="shortBio">
@@ -195,7 +195,7 @@
         <p id="bioBody">
             There were two 45 minute-long ideation sessions that produced 110 ideas. The objectice was to come up with as many judgement free ideas inspired by the design criteria as possible.
             <br>  <br>
-            <img src="../images/sl_appndx4.png" width="60%">
+            <img src="../images/sl_appndx4.png" width="60%" id="contentImage">
             <br>
         </p>
 </div>
@@ -229,7 +229,7 @@
 
             <h1 id="sectionHead"> Low-Fidelity Prototype
             </h1>
-            <img src="../images/st_low-fi.png" width=50%/>
+            <img src="../images/st_low-fi.png" width=50%/ id="contentImage">
 
     </div>
 
