--- a/root/html/herdHikes.html
+++ b/root/html/herdHikes.html
@@ -70,7 +70,7 @@
             </p>
         </div>
         <table>
-            <tr>
+            <tr id="tableHeaderLine">
                 <td id="topRow"><strong>Role</strong></td>
                 <td id="topRow"><strong>Year</strong></td>
                 <td id="topRow"><strong>Tech</strong></td>
@@ -112,9 +112,9 @@
   <br>
 
         <table>
-            <tr>
-                <th>Interview Method</th>
-                <td>#</td>
+            <tr id="tableHeaderLine">
+                <th><b>Interview Method</b></th>
+                <td><b>#</b></td>
             </tr>
             <tr>
                 <th>Online Survey</th>
