--- a/root/html/herdHikes.html
+++ b/root/html/herdHikes.html
@@ -70,7 +70,8 @@
             </p>
         </div>
         <table>
-            <tr id="tableHeaderLine">
+            <!-- <tr id="tableHeaderLine"> -->
+                <tr>
                 <td id="topRow"><strong>Role</strong></td>
                 <td id="topRow"><strong>Year</strong></td>
                 <td id="topRow"><strong>Tech</strong></td>
@@ -149,16 +150,20 @@
         <div id="shortBio">
         <p id="bioBody">
 
-    ● What additional activities do you like to participate in while on a hiking trip? (e.g. climbing, kayaking, biking, camping, etc.)
+    ● What additional activities do you like to participate in while on a hiking trip?
             <br><br>● How often do you hike throughout the year, and what factors motivate your decisions?
             <br><br>● Approximately how many hiking trips do you schedule and cancel each year? Why?
             <br><br>● What are the factors used to determine which trail you choose? (eg. location, difficulty, trail completion time, views, landmarks, etc.)
-            <br><br>● Do you prefer to hike in groups or alone? How do you coordinate hiking trips? What are associated hurdles? </p>
+            <br><br>● Do you prefer to hike solo or in a group?
+            <br><br>● How do you coordinate hiking trips and what are some of the challenges you've experienced? </p>
         
         <h1 id="sectionHead">Data-Driven Insight</h1>
 
-        <p id="bioBody"> One individual interviewed has a friendly competition with a friend relating to tracking their physical activity, so we could see competition being a small factor for some users. <br><br>78% of  interviewees did not like using their phones during hikes.<br><br> A few people
-            liked to track their steps and calories on the trail.<br><br> Everyone liked hiking with at least a small group of friends.<br><br>All interviewees stated that they like to hike because they want to spend time outdoors.
+        <p id="bioBody"> One individual interviewed has a friendly competition with a friend relating to tracking their physical activity, so we could see competition being a small factor for some users. 
+            <br><br>● 78% of  interviewees did not like using their phones during hikes.
+            <br><br>● A few people liked to track their steps and calories on the trail.
+            <br><br>● Everyone liked hiking with at least a small group of friends.
+            <br><br>● All interviewees stated that they like to hike because they want to spend time outdoors.
         </p>
 </div>
 </div>
