--- a/root/html/experiments.html
+++ b/root/html/experiments.html
@@ -148,19 +148,21 @@
                                 <sup>07</sup> <a onclick="return confirm_alert(this);" id = "projectName">Euphonics.io</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
                         </div>
-
-                    
-
+                        <div class="item software">
+                            <p class="animate__animated animate__fadeIn" id="titleWork">
+                                <sup>08</sup> <a onclick="return confirm_alert(this);" id = "projectName">WarGames: Web</a></p>
+                            <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
+                            </div>
                  
                         <div class="item professional">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>08</sup><a onclick="return confirm_alert(this);" id = "projectName"> DEW Branding</a></p>
+                                <sup>09</sup><a onclick="return confirm_alert(this);" id = "projectName"> DEW Branding</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">MISC  |  2022</p>
                         </div>
 
                         <div class="item professional">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>09</sup><a onclick="return confirm_alert(this);" id = "projectName"> Misc. Works</a></p>
+                                <sup>10</sup><a onclick="return confirm_alert(this);" id = "projectName"> Misc. Works</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">MISC.  |  2019-2022</p>
                         </div>
 
