--- a/root/html/experiments.html
+++ b/root/html/experiments.html
@@ -115,54 +115,54 @@
                             <p class="animate__animated animate__fadeIn " id="descriptName">UI / UX  |  2021</p>
                         </div>
 
-                        <div class="item software">
+                        <div class="item threeD">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>02</sup> <a onclick="return confirm_alert(this);" id = "projectName">Abloh Immersive</a></p>
-                            <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
+                                <sup>02</sup> <a onclick="return confirm_alert(this);" id = "projectName">Graff AR</a></p>
+                            <p class="animate__animated animate__fadeIn" id="descriptName">XR  |  2022</p>
                         </div>
 
-                        <div class="item threeD">
+                        <!-- <div class="item threeD">
                             <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>03</sup><a onclick="return confirm_alert(this);" id = "projectName"> 2022: AR Space Odyssey</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">3D  |  2022</p>
-                        </div>
+                        </div> -->
 
 
                         <div class="item print">
-                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>04</sup> <a onclick="return confirm_alert(this);" id = "projectName">Generative Typography</a></p>
+                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>03</sup> <a onclick="return confirm_alert(this);" id = "projectName">Generative Typography</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">GENERATIVE ART  |  2022</p>
                         </div>
 
 
                         <div class="item motion">
-                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>05</sup><a onclick="return confirm_alert(this);" id = "projectName"> Kinetic Typography</a></p>
+                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>04</sup><a onclick="return confirm_alert(this);" id = "projectName"> Kinetic Typography</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">MOTION  |  2022</p>
                         </div>
 
 
                         <div class="item hardware">
-                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>06</sup><a onclick="return confirm_alert(this);" id = "projectName"> SensOrb</a></p>
+                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>05</sup><a onclick="return confirm_alert(this);" id = "projectName"> SensOrb</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">HARDWARE  |  2021</p>
                         </div>
                         <div class="item software">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>07</sup> <a onclick="return confirm_alert(this);" id = "projectName">Euphonics.io</a></p>
+                                <sup>06</sup> <a onclick="return confirm_alert(this);" id = "projectName">Euphonics.io</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
                         </div>
                         <div class="item software">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>08</sup> <a onclick="return confirm_alert(this);" id = "projectName">WarGames: Web</a></p>
+                                <sup>07</sup> <a onclick="return confirm_alert(this);" id = "projectName">WarGames</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
                             </div>
                  
-                        <div class="item professional">
+                        <!-- <div class="item professional">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
                                 <sup>09</sup><a onclick="return confirm_alert(this);" id = "projectName"> DEW Branding</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">MISC  |  2022</p>
-                        </div>
+                        </div> -->
 
                         <div class="item professional">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>10</sup><a onclick="return confirm_alert(this);" id = "projectName"> Misc. Works</a></p>
+                                <sup>08</sup><a onclick="return confirm_alert(this);" id = "projectName"> Misc. Works</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">MISC.  |  2019-2022</p>
                         </div>
 
