Add content to misc Works

--- a/root/html/herdHikes.html
+++ b/root/html/herdHikes.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>HerdHikes | DEW</title>
     <link rel="shortcut icon" type="image/png" href="../images/designfavicon.svg" sizes="32x32" />
-    <link href="../css/hike.css" rel="stylesheet" type="text/css">
+    <link href="../css/misc.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.typekit.net/jil3vcw.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
