--- a/root/html/about.html
+++ b/root/html/about.html
@@ -51,6 +51,7 @@
         <div id="shortBio">
         <p id="underName"> Heyo, I'm Davina!</p>
         </div>
+    
             <p id="bioBody">
                Art, Business, and Technology are my three greatest passions, and I am interested in understanding stakeholder needs to develop effective, technical, and artistic user-centered solutions. Regardless of the creative approach, digital
                 media, business problem-solving or progamming, I strive to intrigue, inform, and assist users.
@@ -75,6 +76,12 @@
                         <span title="Open PDF in Browser"> View Resumé </span></i></u></a>
                 <br><br>
             </p>
+
+            <p id="bioBody">
+                <img src="../images/pulpFiction.JPG" height="200px">
+                <img src="../images/pic1.jpeg" height="200px">
+                <img src="../images/camera.PNG" height="200px">
+             </p>
         
 
         <script type="text/javascript">
@@ -175,7 +182,13 @@
                     <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">Illustrator</td>
                     <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">Photoshop</td>
                     <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">Figma</td>
-                </tr>   
+                </tr> 
+                <tr> 
+                    <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">Miro</td>
+                    <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">Storyline</td>
+                    <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">Jira</td>
+                    <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">Adobe XD</td>
+                </tr>    
                 </table>
                 </p>
 <style>
