Add content and fix responsiveness

--- a/root/html/about.html
+++ b/root/html/about.html
@@ -80,7 +80,7 @@
             <p id="bioBody">
                 <img src="../images/pulpFiction.JPG" height="200px">
                 <img src="../images/pic1.jpeg" height="200px">
-                <img src="../images/camera.PNG" height="200px">
+                <img src="../images/camera.png" height="200px">
              </p>
         
 
