--- a/root/html/experiments.html
+++ b/root/html/experiments.html
@@ -157,7 +157,7 @@
                         </div>
                         <div class="item software">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>07</sup> <a href="wargames.html">WarGames</a></p>
+                                <sup>07</sup> <a href="wargames.html" id = "projectName">WarGames</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
                             </div>
                  
