--- a/root/html/miscWorks.html
+++ b/root/html/miscWorks.html
@@ -125,6 +125,7 @@
       <object data="../images/EdTech2.pdf" type="application/pdf" width="50%" height="300%" >
         <p>Alternative text - include a link <a href="myfile.pdf">to the PDF!</a></p>
       </object>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/lq4VypStXD0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
