--- a/root/html/experiments.html
+++ b/root/html/experiments.html
@@ -140,24 +140,24 @@
                         </div>
 
 
-                        <div class="item motion">
+                        <!-- <div class="item motion">
                             <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>04</sup><a onclick="return confirm_alert(this);" id = "projectName"> Kinetic Typography</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">MOTION  |  2022</p>
-                        </div>
+                        </div> -->
 
 
-                        <div class="item hardware">
+                        <!-- <div class="item hardware">
                             <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>05</sup><a onclick="return confirm_alert(this);" id = "projectName"> SensOrb</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">HARDWARE  |  2021</p>
-                        </div>
+                        </div> -->
                         <div class="item software">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>06</sup> <a onclick="return confirm_alert(this);" id = "projectName">Euphonics.io</a></p>
+                                <sup>04</sup> <a onclick="return confirm_alert(this);" id = "projectName">Euphonics.io</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
                         </div>
                         <div class="item software">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>07</sup> <a href="wargames.html" id = "projectName">WarGames</a></p>
+                                <sup>05</sup> <a href="wargames.html" id = "projectName">WarGames</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
                             </div>
                  
@@ -169,7 +169,7 @@
 
                         <div class="item professional">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>08</sup><a href="miscWorks.html" id = "projectName"> Misc. Works</a></p>
+                                <sup>06</sup><a href="miscWorks.html" id = "projectName"> Misc. Works</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">MISC.  |  2019-2022</p>
                         </div>
 
