--- a/root/html/experiments.html
+++ b/root/html/experiments.html
@@ -152,12 +152,12 @@
                         </div> -->
                         <div class="item software">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>04</sup> <a onclick="return confirm_alert(this);" id = "projectName">Euphonics.io</a></p>
+                                <sup>04</sup> <a href="euphonics.html" target="blank">Euphonics.io</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
                         </div>
                         <div class="item software">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>05</sup> <a href="wargames.html" id = "projectName">WarGames</a></p>
+                                <sup>05</sup> <a href="wargames.html" id = "projectName" target="blank">WarGames</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
                             </div>
                  
@@ -169,7 +169,7 @@
 
                         <div class="item professional">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>06</sup><a href="miscWorks.html" id = "projectName"> Misc. Works</a></p>
+                                <sup>06</sup><a href="miscWorks.html" id = "projectName" target="blank"> Misc. Works</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">MISC.  |  2019-2022</p>
                         </div>
 
