--- a/root/html/miscWorks.html
+++ b/root/html/miscWorks.html
@@ -90,7 +90,9 @@
                 </div>
 
     <div id="shortBio">
-        <h1 id="sectionHead">Active Radar : Mobile and Ubiquitous Computing</h1>
+        <h1 id="sectionHead">Active Radar
+            <br><br>
+        </h1>
         <div id="shortBio">
             <!-- <p id="bioBody">
             No applications are offering services that are created for the purpose of helping hikers choose and schedule hiking trips. 
@@ -107,7 +109,7 @@
       <!-- </object> -->
 
       <div id="shortBio">
-        <h1 id="sectionHead">Dr. Seuss's Polution Solution (Edutainment)</h1>
+        <h1 id="sectionHead"><br><br><br><br>Dr. Seuss's Polution Solution (Edutainment)    <br><br></h1>
         <div id="shortBio">
             <!-- <p id="bioBody">
             No applications are offering services that are created for the purpose of helping hikers choose and schedule hiking trips. 
@@ -115,18 +117,18 @@
    
     </div>
     </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/lq4VypStXD0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/b_8NvJSbamE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
     <embed src="../images/EdTech1.pdf" height=500px width="500px" />
     <embed src="../images/EdTech2.pdf" height=500px width="500px" />
 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/lq4VypStXD0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p>This video is available. Click- "Watch on Youtube."</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/b_8NvJSbamE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+  
 
 
 
       <div id="shortBio">
-        <h1 id="sectionHead">Qualitiative HCI - Woman's Health</h1>
+        <h1 id="sectionHead"><br><br><br><br>Qualitiative HCI<br> Woman's Health    <br><br></h1>
         <div id="shortBio">
             <!-- <p id="bioBody">
             No applications are offering services that are created for the purpose of helping hikers choose and schedule hiking trips. 
