--- a/root/html/experiments.html
+++ b/root/html/experiments.html
@@ -152,7 +152,7 @@
                         </div> -->
                         <div class="item software">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>04</sup> <a href="euphonics.html" >Euphonics.io</a></p>
+                                <sup>04</sup> <a href="euphonics.html" id = "projectName">Euphonics.io</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
                         </div>
                         <div class="item software">
