--- a/root/html/herdHikes.html
+++ b/root/html/herdHikes.html
@@ -228,7 +228,7 @@
           <b>Focus on Community and Convenience</b> - Our interviewees liked the social aspects of hiking but struggle with planning hikes. This website will provide features to the user to help them plan and obtain information regarding their
             hike in a centralized location.
 
-            <br><br><b>Users</b> - The most relevant users would be enthusiastic hikers looking to hike with groups of individuals. Primarily this appeals to our John Walker persona. Our target demographic consists of enthusiastic hikers 25-50.
+            <br><br><b>Users</b> - The most relevant users would be enthusiastic hikers looking to hike with groups of individuals. Primarily this appeals to our John Brooks persona. Our target demographic consists of enthusiastic hikers 25-50.
           
 
 </p>
