--- a/root/html/dognitive.html
+++ b/root/html/dognitive.html
@@ -119,7 +119,7 @@
          </p> 
          <h1 id="sectionHead">Affinity Mapping</h1>
          <p id="bioBody"> 
-             <img src="../images/affinityDognitive.PNG" width="80%"><br><br> <br>
+             <img src="../images/affinityDognitive.png" width="80%"><br><br> <br>
 We used the affinity mapping framework to identify overarching themes and patterns in our participants’ interviews. Our team members all reviewed the data and collaboratively and dynamically
 sorted our notes, promoting interrater reliability.
             </p>
