--- a/root/homeThreeJS/src/index.html
+++ b/root/homeThreeJS/src/index.html
@@ -22,10 +22,11 @@
             gtag('js', new Date());
             gtag('config', 'G-31QNDERZ67');
             </script>
+          
         </head>
 
     <body>
-
+        <!-- <script src="/examples/js/geometries/ConvexGeometry.js"></script> -->
         <canvas class="webgl"></canvas>
         <div class="loading-bar">
 
