--- a/root/html/about.html
+++ b/root/html/about.html
@@ -46,7 +46,7 @@
     
 
     <a href="../html/index.html"><img id="homeIcon" src="../images/dewLogo.png" width="40px" style="float:left;"></a>
-    <img src="../images/dwool.jpeg" id="myPic">
+    <!-- <img src="../images/dwool.jpeg" id="myPic"> -->
 
     <div id="margined">
         <div id="shortBio">
