--- a/root/html/index.html
+++ b/root/html/index.html
@@ -36,9 +36,9 @@
                 <div>
                     <div class="texts">
                         <ul>
-                            <li><a href="../html/about.html" id="menuLinks">ABOUT</a></li>
+                            <li><a href="../html/about.html" class="menuLinks">ABOUT</a></li>
                             <li id="divideTab">|</li>
-                            <li><a href="../html/experiments.html" id="menuLinks">EXPERIMENTS</a></li>
+                            <li><a href="../html/experiments.html" class="menuLinks">EXPERIMENTS</a></li>
                         </ul>
                     </div>
                 </div>
@@ -50,12 +50,13 @@
                 <a href="../html/about.html">DAVINA <div id = "hyphenOne">|</div> E'MAN <div id = "hyphenOne">|</div> WOOLEY</a>
             </h1>
             <a href="../html/experiments.html">
-                <h2 class="animate__animated animate__fadeIn" id="underName">ART</h2>
-                <h2 class="animate__animated animate__fadeIn" id="divideLine">|</h2>
-                <h2 class="animate__animated animate__fadeIn" id="underName">BUSINESS</h2>
-                <h2 class="animate__animated animate__fadeIn" id="divideLine">|</h2>
-                <h2 class="animate__animated animate__fadeIn" id="underName">TECH</h2>
+                <h2 class="underName">ART</h2>
+                <h2 class="divideLine">|</h2>
+                <h2 class="underName">BUSINESS</h2>
+                <h2 class="divideLine">|</h2>
+                <h2 class="underName">TECH</h2>
             </a>
+            
         </div>
     </body>
 </html>
