--- a/root/homeThreeJS/src/index.html
+++ b/root/homeThreeJS/src/index.html
@@ -77,9 +77,9 @@
 
         <div id="nameTitle">
             <h1 class="animate__animated animate__fadeIn" id="topName">
-                <a href="../html/about.html">DAVINA <div id = "hyphenOne">|</div> E'MAN <div id = "hyphenOne">|</div> WOOLEY</a>
+                <a href="../../../root/html/about.html">DAVINA <div id = "hyphenOne">|</div> E'MAN <div id = "hyphenOne">|</div> WOOLEY</a>
             </h1>
-            <a href="../html/experiments.html">
+            <a href="../../../root/html/experiments.html">
                 <h2 class="animate__animated animate__fadeIn" id="underName">ART</h2>
                 <h2 class="animate__animated animate__fadeIn" id="divideLine">|</h2>
                 <h2 class="animate__animated animate__fadeIn" id="underName">BUSINESS</h2>
