fix styling about bio

--- a/root/html/miscWorks.html
+++ b/root/html/miscWorks.html
@@ -60,22 +60,6 @@
 
 
             </p>
-        <!-- </div>
-        <table>
-    
-                <tr>
-                <td id="topRow"><strong>Role</strong></td>
-                <td id="topRow"><strong>Year</strong></td>
-                <td id="topRow"><strong>Tech</strong></td>
-            </tr>
-            <tr>
-                <td>UI/UX Designer & Researcher</td>
-                <td>2021</td>
-                <td id="makeInline">Illustrator & Figma</td>
-            </tr>
-        </table>
-        <br><br> -->
-        <!-- <hr> -->
 
 
                 <!-- skills -->
@@ -94,9 +78,7 @@
             <br><br>
         </h1>
         <div id="shortBio">
-            <!-- <p id="bioBody">
-            No applications are offering services that are created for the purpose of helping hikers choose and schedule hiking trips. 
-        </p> -->
+
         <iframe width="560" height="315" src="https://www.youtube.com/embed/6PA3NgU2t0M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/nHA8c8517tU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
@@ -104,19 +86,14 @@
     </div>
     </div>
     <embed src="../images/ActiveRadar.pdf" height=500px width="500px" />
-    <!-- <object data="../images/ActiveRadar.pdf" type="application/pdf" height="100%" > -->
-        <!-- <p>Alternative text - include a link <a href="myfile.pdf">to the PDF!</a></p> -->
-      <!-- </object> -->
 
       <div id="shortBio">
         <h1 id="sectionHead"><br><br><br><br>Dr. Seuss's Polution Solution (Edutainment)    <br><br></h1>
         <div id="shortBio">
-            <!-- <p id="bioBody">
-            No applications are offering services that are created for the purpose of helping hikers choose and schedule hiking trips. 
-        </p> -->
    
     </div>
     </div>
+    <img src="../images/soos.png" width=560px>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/lq4VypStXD0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/b_8NvJSbamE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
@@ -130,20 +107,10 @@
       <div id="shortBio">
         <h1 id="sectionHead"><br><br><br><br>Qualitiative HCI<br> Woman's Health    <br><br></h1>
         <div id="shortBio">
-            <!-- <p id="bioBody">
-            No applications are offering services that are created for the purpose of helping hikers choose and schedule hiking trips. 
-        </p> -->
    
     </div>
     </div>
     <embed src="../images/qualHCI.pdf" height=500px width="500px" />
-
-
-      <!-- <video width="320" height="240" controls>
-        <source src="../images/qualHCI.mov" type="video/mov">
-
-      Your browser does not support the video tag.
-      </video> -->
 
 <style>
 
