three js styling

--- a/root/homeThreeJS/src/index.html
+++ b/root/homeThreeJS/src/index.html
@@ -79,6 +79,7 @@
             <h1 class="animate__animated animate__fadeIn" id="topName">
                 <a href="../../../root/html/about.html">DAVINA <div id = "hyphenOne">|</div> E'MAN <div id = "hyphenOne">|</div> WOOLEY</a>
             </h1>
+            <div id  = "sub">
             <a href="../../../root/html/experiments.html">
                 <h2 class="animate__animated animate__fadeIn" id="underName">ART</h2>
                 <h2 class="animate__animated animate__fadeIn" id="divideLine">|</h2>
@@ -86,6 +87,7 @@
                 <h2 class="animate__animated animate__fadeIn" id="divideLine">|</h2>
                 <h2 class="animate__animated animate__fadeIn" id="underName">TECH</h2>
             </a>
+            </div>
         </div>
     </body>
 </html>
