--- a/root/html/euphonics.html
+++ b/root/html/euphonics.html
@@ -21,7 +21,8 @@
 
 <body>
     <div id="nameTitle">
-        <h1 class="animate__animated animate__fadeIn" id="topName"> EUPHONICS.IO <br>© 2022 Davina Wooley<br> July, 2022</h1>
+        <h1 id="topName"> euphonics.io</h1>
+        <h1 id="makeWhite"> © 2022 Davina Wooley<br> July, 2022</h1>
 
     </div>
 </body>
