--- a/root/html/experiments.html
+++ b/root/html/experiments.html
@@ -139,9 +139,12 @@
                         </div> -->
                         <div class="item software">
                             <p class="titleWork">
-                                <sup>04</sup> <a href="euphonics.html" class = "projectName">Euphonics.io *</a></p>
+                                <sup>04</sup> <a onclick="return confirm_alert(this);" class = "projectName">Euphonics.io *</a></p>
                             <p class="descriptName">SOFTWARE  |  2022</p>
                         </div>
+
+
+                        
                         <div class="item software">
                             <p class="titleWork">
                                 <sup>05</sup> <a href="wargames.html" class = "projectName" >WarGames</a></p>
