--- a/root/html/herdHikes.html
+++ b/root/html/herdHikes.html
@@ -55,20 +55,7 @@
 
         <p id="underName">HerdHikes</p>
         <p id="underNameSub">UI/UX</p>
-        <hr>
 
-  
-
-        <div id="shortBio">
-            <p id="bioBody">
-
-                <br>
-                Hiking is an excellent activity that presents a unique opportunity for individuals to exercise, enjoy nature, socialize, and take a mental break from the chaos of everyday life. 
-                The goal was to create a product that decreases the users' logistical concerns, allowing them to focus on the hike more than the planning, scheduling, coordinating and communicatiion.
-                <br>
-                <br>
-            </p>
-        </div>
         <table>
             <!-- <tr id="tableHeaderLine"> -->
                 <tr>
@@ -82,7 +69,6 @@
                 <td id="makeInline">Illustrator & Figma</td>
             </tr>
         </table>
-        <br><br>
         <hr>
 
                 <div class="skills "></div>
@@ -90,7 +76,15 @@
                 <div class="skills">
 
                 </div>
-
+                <div id="shortBio">
+                    <h1 id="sectionHead">Overview</h1>
+                    <p id="bioBody">
+        
+                        Hiking is an excellent activity that presents a unique opportunity for individuals to exercise, enjoy nature, socialize, and take a mental break from the chaos of everyday life. 
+                        The goal was to create a product that decreases the users' logistical concerns, allowing them to focus on the hike more than the planning, scheduling, coordinating and communicatiion.
+                      
+                    </p>
+                </div>
     <div id="shortBio">
         <h1 id="sectionHead">Competitive Analysis</h1>
         <div id="shortBio">
